--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 *.pyc
 *.pyo
 env/
-env*
+# env*
 dist/
 build/
 *.egg
@@ -29,5 +29,4 @@ htmlcov/
 
 # old
 old_main.py
-iam-role-policy
 element.txt
